# plamya

./: .env.example  .gitignore  CLAUDE.md  PROJECTS_REGISTRY.json  README.md  plamya.py  pyproject.toml  requirements-minimal.txt  requirements.txt  run_bots.py
.claude/: settings.local.json
chappie_engine/: __init__.py  __main__.py  client.py  config.py  run.py  safety.py
content/: catalog_products.json  outreach_list.md  products_database.json
content_manager_bot/: README.md  __init__.py  main.py
curator_bot/: README.md  main.py
curator_miniapp/: README.md  __init__.py
deploy/: telegram-job-monitor.service
discipline_bot/: README.md  __init__.py  config.py  state.py
docs/: CHANGELOG_2026_01_21.md  CHANGELOG_2026_01_23.md  CHANGELOG_2026_01_24.md  CHANGELOG_2026_01_24_v2.md  CHANGELOG_2026_01_26.md  CHANGELOG_2026_01_26_MEDIA_LIBRARY.md  CHANGELOG_2026_02_03.md  CHANNEL_ADMIN_GUIDE.md  CLAUDE_PROMPTS_ANALYSIS.md  CONTENT_MANAGER_IMPLEMENTATION.md  CONTENT_STYLE_GUIDE.md  DEPLOYMENT_MEDIA_LIBRARY.md  DEPLOYMENT_TRAFFIC_ENGINE.md  DEPLOY_JOB_MONITOR.md  DEPLOY_PARTNER_PANEL.md  FORGE_DESIGN_SYSTEM.md  LOAD_TESTING_SUMMARY.md  LOAD_TESTING_SYSTEM.md  MEDIA_LIBRARY_OPTIMIZATION.md  PARTNER_ONBOARDING_GUIDE.md  PLAN_2M_INCOME.md  PROJECT_ANALYSIS_2026_01_23.md  RUN_LOAD_TESTS.md  TESTING_REPORT_2026_01_28.md  TESTING_REPORT_2026_01_28_1223.md  TESTING_REPORT_2026_01_28_1239.md  VERIFICATION_CHECKLIST.md  VPS_DEPLOY.md  YANDEXGPT_SETUP.md
infobiz_engine/: __init__.py  __main__.py  config.py  run.py
mission_control/: README.md  start.bat  start_tunnel.py
partner_panel/: README.md
sales_engine/: __init__.py  config.py  content_planner.py  knowledge.py  objection_handler.py  prospect_analyzer.py  run.py
(+796 files in other folders)
